--- a/styles/style.css
+++ b/styles/style.css
@@ -146,12 +146,13 @@ fieldset {
 }
 
 .page-header__container {
-  z-index: 3;
+  z-index: 1;
   position: relative;
   width: 1160px;
   margin: 0 auto;
   padding: 0 61px;
-  padding-bottom: 38px;
+  padding-bottom: 28px;
+  margin-bottom: 10px;
   padding-top: 13px;
   display: flex;
   flex-direction: column;
@@ -370,7 +371,7 @@ fieldset {
 
 .page-header__site-navigation {
   display: flex;
-  align-items: flex-start;
+  align-items: baseline;
 }
 
 .site-navigation__product-catalog {
@@ -414,7 +415,15 @@ fieldset {
   display: none;
 }
 
-.popover__product-catalog {
+.popover--open {
+  display: block;
+}
+
+.site-navigation__product-catalog:focus + .popover-product-catalog {
+  display: block;
+}
+
+.popover-product-catalog {
   left: 0;
   top: 190px;
   width: 100%;
@@ -481,6 +490,7 @@ fieldset {
 
 .products-slider {
    background-image: linear-gradient(180deg, #ffe17f 137px, #fff 1px );
+   position: relative;
 }
 
 .products-slider__list {
