--- a/styles/style.css
+++ b/styles/style.css
@@ -383,26 +383,21 @@ fieldset {
   display: flex;
   align-items: center;
   margin-top: -15px;
-  background-image: url('../img/icons/plus-icon.svg');
-  background-repeat: no-repeat;
-  background-position: right center;
 }
 
-.site-navigation__product-catalog:hover {
-  background-image: url('../img/icons/black-plus-icon.svg');
+.site-navigation__product-catalog::after {
+  content: url(../img/icons/black-plus-icon.svg);
+  position: absolute;
+  right: 0;
+  opacity: .3;
 }
 
-.site-navigation__product-catalog:active {
-  background-image: url('../img/icons/grey-minus.svg');
+.site-navigation__product-catalog:focus::after {
+  content: url(../img/icons/minus-icon.svg);
 }
 
-.site-navigation__product-catalog:focus {
-  background-image: url('../img/icons/grey-minus.svg');
-}
-
-.site-navigation__product-catalog:focus {
-  outline: none;
-  border: none;
+.site-navigation__product-catalog:hover::after {
+  opacity: 1;
 }
 
 .site-navigation__product-catalog:focus-visible {
@@ -432,15 +427,152 @@ fieldset {
   background-color: #ffe17f;
 }
 
-.popover__list {
+.popover-product-catalog .popover__list {
   display: grid;
   grid-template-columns: repeat(3, max-content);
   column-gap: 61px;
   row-gap: 10px;
 }
 
-.popover__item:last-child {
+.popover-product-catalog .popover__item:last-child {
   grid-row: 3 / 4;
+}
+
+.popover-basket {
+  right: -15px;
+  top: 125px;
+  background-color: #000;
+  width: 320px;
+  padding-bottom: 20px;
+}
+
+.popover-basket::after {
+  content: '';
+  width: 14px;
+  height: 6px;
+  background-image: url('../img/icons/angular.svg');
+  position: absolute;
+  left: 50%;
+  transform: translateX(-50%);
+  top: -6px;
+}
+
+.popover-basket .popover__product-name {
+  margin: 0;
+  width: min-content;
+  line-height: 20px;
+  color: #fff;
+}
+
+.popover-basket .popover__list {
+  width: 100%;
+  position: relative;
+}
+
+.popover-basket .popover__item {
+  display: flex;
+  padding: 20px;
+  width: 100%;
+  border-bottom: 1px solid #1a1a1a;
+}
+
+.popover-basket .popover__item--close {
+  display: none;
+}
+
+.popover-basket .popover__link {
+  display: flex;
+}
+
+.popover-basket .popover__link:hover {
+  opacity: .6;
+}
+
+.popover-basket .popover__link:focus-visible {
+  border: none;
+  outline: none;
+  box-shadow: 0 0 0 2px #AF4FFF;
+}
+
+.popover-basket .popover__link:active {
+  opacity: .3;
+}
+
+.popover-basket .popover__image {
+  margin-right: 23px;
+}
+
+.popover-basket .popover__close-button {
+  width: 10px;
+  height: 10px;
+  margin-left: auto;
+  align-self: flex-start;
+  background-color: transparent;
+  border: none;
+  background-image: url('../img/icons/close-button.svg');
+  background-repeat: no-repeat;
+  background-position: center center;
+  cursor: pointer;
+}
+
+.popover-basket .popover__close-button:hover {
+  opacity: .6;
+}
+
+.popover-basket .popover__close-button:focus-visible {
+  border: none;
+  outline: none;
+  box-shadow: 0 0 0 2px #AF4FFF;
+}
+
+.popover-basket .popover__close-button:active {
+  opacity: .3;
+}
+
+.popover-basket .popover__info {
+  background-color: #1a1a1a;
+  display: flex;
+  padding: 0 20px;
+  height: 44px;
+  align-items: center;
+  width: 100%;
+  justify-content: space-between;
+  margin-bottom: 20px;
+}
+
+.popover-basket .popover__products-quantity,
+.popover-basket .popover__sum {
+  color: #fff;
+  line-height: 20px;
+}
+
+.popover-basket .popover__button {
+  padding: 15px 25px;
+  background-color: #fff;
+  color: #000;
+  font-weight: var(--fw-super-bold);
+  font-size: 16px;
+  line-height: 21px;
+  letter-spacing: .2em;
+  text-transform: uppercase;
+  border: none;
+  width: 280px;
+  cursor: pointer;
+  margin-left: 20px;
+}
+
+.popover-basket .popover__button:hover {
+  background-color: #FFE17F;
+}
+
+.popover-basket .popover__button:focus-visible {
+  border: 0;
+  outline: none;
+  box-shadow: 0 0 0 2px #AF4FFF;
+}
+
+.popover-basket .popover__button:active {
+  color: rgba(0, 0, 0, .3);
 }
 
 .page-header__list {
