--- a/styles/style.css
+++ b/styles/style.css
@@ -1843,9 +1843,53 @@ fieldset {
   background-color: #fff;
 }
 
+.catalog__item {
+  position: relative;
+}
+
 .catalog__image {
   background-color: #f0f0f0;
   margin-bottom: 32px;
+}
+
+.catalog__image-info {
+  width: 360px;
+  height: 380px;
+  position: absolute;
+  background-color: rgba(240, 240, 240, 0.8);
+  top: 0;
+  display: none;
+  justify-content: center;
+  align-items: center;
+}
+
+.catalog__image-link {
+  padding: 0 40px;
+  padding-top: 2px;
+}
+
+.catalog__item:focus-visible {
+  box-shadow: 0 0 0 2px #AF4FFF;
+}
+
+.catalog__item:hover .catalog__image-info {
+  display: flex;
+}
+
+.catalog__item:active .catalog__image-link::before {
+  background-color: #FFC700;
+}
+
+.catalog__item:hover .catalog__product-name {
+  opacity: .6;
+}
+
+.catalog__item:active .catalog__product-name {
+  opacity: .3;
+}
+
+.catalog__item:active .catalog__price {
+  opacity: .3;
 }
 
 .catalog__product-name {
