--- a/styles/style.css
+++ b/styles/style.css
@@ -1671,6 +1671,10 @@ fieldset {
   font-weight: var(--fw-bold);
   font-size: 18px;
   line-height: 20px;
+  width: 100%;
+  padding: 0;
+  padding-top: 12px;
+  border-top: 2px solid #000;
 }
 
 .price-title {
