--- a/styles/style.css
+++ b/styles/style.css
@@ -149,6 +149,11 @@ fieldset {
   background-image: linear-gradient(180deg, #fff 35px, #ffe17f 1px);
 }
 
+.page-header__container--catalog {
+  margin-bottom: 0;
+  padding-bottom: 23px;
+}
+
 .page-header__logo {
   display: block;
   margin-right: auto;
@@ -235,7 +240,7 @@ fieldset {
 }
 
 .site-login__item:not(:last-child) {
-  margin-right: 18px;
+  margin-right: 27px;
 }
 
 .site-login__item:nth-child(1) .site-login__link {
@@ -1245,12 +1250,12 @@ fieldset {
 
 .products-catalog__header-container {
   width: 1160px;
-  padding: 35px 21px 35px 60px;
+  padding: 35px 21px 29px 60px;
   margin: 0 auto;
 }
 
 .products-catalog__title {
-  margin-bottom: 16px;
+  margin-bottom: 10px;
 }
 
 .products-catalog__list {
@@ -1282,19 +1287,19 @@ fieldset {
   display: flex;
   flex-direction: column;
   width: 320px;
-  padding:  25px 60px 0 60px;
+  padding:  25px 60px 0 58px;
 }
 
 .products-filter__color {
   display: flex;
   flex-direction: column;
-  margin-bottom: 35px;
+  margin-bottom: 33px;
 }
 
 .products-filter__bluetooth {
   display: flex;
   flex-direction: column;
-  margin-bottom: 35px;
+  margin-bottom: 33px;
 }
 
 .products-filter__bluetooth-label:not(:last-child) {
@@ -1311,7 +1316,7 @@ fieldset {
 
 .catalog__header {
   width: 100%;
-  padding: 20px 40px;
+  padding: 20px 46px 20px 40px;
   display: flex;
   align-items: center;
 }
@@ -1363,7 +1368,7 @@ fieldset {
   display: grid;
   grid-template-columns: repeat(2, 360px);
   gap: 44px 40px;
-  margin-bottom: 44px;
+  margin-bottom: 41px;
 }
 
 .catalog__link {
@@ -1847,7 +1852,7 @@ fieldset {
 }
 
 .products-filter__button {
-  width: 100%;
+  width: 220px;
   padding: 10px 0;
   cursor: pointer;
 }
@@ -1956,7 +1961,7 @@ fieldset {
   color: #000;
   cursor: pointer;
   text-transform: uppercase;
-  margin-bottom: 44px;
+  margin-bottom: 40px;
   width: 100%;
   padding: 18px 0;
 }
